grammar.js
    anubis_source: $ => seq(
      repeat($._top_item),
      optional(seq($.apg2, repeat($._top_item)))
    ),
 
    _top_item: $ => choice(
      $.out_comment,
      $.todo_line,
      $.par_read,
      $.par_execute,
      $.par_def,
      $.par_type,
      $.par_type_alias,
      $.par_describe,
      $.par_c_constructors,
    ),
 
    par_end: $ => $._enddot,
 
 
    // --- --- --- Small paragraphs
 
    // read path | transmit path  -- no end dot, ends with the path
    par_read: $ => seq(
      $.kw_read,
      field('path', choice(alias(/[^"\s]\S*/, $.path), $.lit_string))
    ),
 
    // execute <rest of the line>
    par_type: $ => seq(
      $.kw_type,
      $.type_decl, ":",
      choice(
        $.par_end,
        alias($._dotdotdot, $.par_end),
        seq(
          $.par_type_alt,
          repeat(seq(optional(","), $.par_type_alt)),
          choice(
            $.par_end,
            seq(optional(","), alias($._dotdotdot, $.par_end))
          )
        )
      )
    ),


    type_decl: $ => seq(
      field('name', $.ty_name),
      optional(sep1($.ty_pname, "(", ")", ","))
    ),
 
    // --- Declaration of a type: body is a list of alternatives terminated by 'par_end'
    par_type_alt: $ => PREC.high(
      choice(
        seq(field('name', $.identifier), optional(sep0($.par_type_alt_factor, "(", ")", ","))),
        seq($.par_type_alt_factor, field('operator', $.binary_tok), $.par_type_alt_factor)
      )),
 
    par_type_alt_factor: $ => PREC.comma(seq(field('type', $.type), optional(field('name', $.identifier)))),
 
    // --- --- --- TYPE EXPRESSIONS
 
    ty_name: $ => PREC.prec_sym_type(/[A-Z]\w*/),
 
    ty_pname: $ => PREC.prec_sym_type(/\$[A-Z]\w*/),
 
    // `)->` is a single glued token (as in lexer.l): aliased to `arrow` so that
    // every function-type arrow is the same node for highlighting.
    type: $ => PREC.prec_of_type(choice(
      seq("(", $.type, ")"),
 
      seq(choice($.ty_name, $.ty_pname), optional(seq("(", $._types1,
        choice(
          ")",
          seq(alias(/\)\s*->/, $.arrow), $.type)
        )
      ))),
 
      seq("(", $._typesargs1, alias(/\)\s*->/, $.arrow), $.type),
      seq("(", $._types2, ")"),
 
      seq($.type, $.arrow, $.type)
    )),
 
    _types1: $ => sep1($.type, null, null, ","),
 
    // Names inside function/tuple types are cosmetic (discarded by the compiler)
    _typesargs1: $ => choice(
      $.type,
      seq($.type, field('name', $.identifier)),
      seq($.type, ",", $._typesargs1),
      seq($.type, field('name', $.identifier), ",", $._typesargs1),
    ),
 
    _types2: $ => choice(
      seq($.type, ",", $.type),
      seq($.type, field('name', $.identifier), ",", $.type),
      seq($.type, ",", $.type, field('name', $.identifier)),
      seq($.type, field('name', $.identifier), ",", $.type, field('name', $.identifier)),
      seq($.type, ",", $._types2),
      seq($.type, field('name', $.identifier), ",", $._types2),
    ),
 
 
    // --- --- --- TERM
    identifier: $ => PREC.identifier(choice($._identifier, $._jocker)),
    _identifier: $ => /([a-z]|_[a-zA-Z0-9_])[a-zA-Z0-9_]*/,
    _jocker: $ => '_',
 
    // Binary op: this function generate a choice
    // We also generate the list of tokens (used when defining symbols)
